fixed colours and image cropping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -154,7 +154,7 @@ ul {
 #cycler {
     position: absolute;
     z-index: -1;
-    top: 0;
+    bottom: 0;
     left: 0;
     height: 100%;
     width: 100%;
@@ -167,6 +167,8 @@ ul {
         min-height: 100%;
         width: 100%;
         height: auto;
+        position: absolute;
+        bottom: 0;
 
         &.fadeOut {
             opacity: 0;
