--- a/css/main.scss
+++ b/css/main.scss
@@ -14,10 +14,10 @@ $base-line-height: 	1.5;
 
 $spacing-unit:     	30px;
 
-$brand-color:		#8D734A;
-$text-color:		#131313;
+$brand-color:		#523C38;
+$text-color:		#3D3C3E;
 
-$grey-color:      	#828282;
+$grey-color:      	#3D3C3E;
 $grey-color-light: 	lighten($grey-color, 40%);
 $grey-color-dark:  	darken($grey-color, 25%);
 
